--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -31,6 +31,27 @@
   .jumbo-slider__container{
     position: relative;
   }
+  .jumbo-slider__slide{
+    width: 100%;
+    height: 100vh;
+    background: red;
+    &--active{
+      opacity: .5;
+    }
+    .jumbo-slider__slide-bg{
+      background-size: cover!important;
+      background-position: center !important;
+      background-repeat: no-repeat !important;
+      width: 100%;
+      height: 100%;
+      cursor: pointer;
+      opacity: 1;
+      transition: opacity 2s ease-in-out;
+      filter: saturate(1);
+      position: absolute;
+      z-index: 1;
+    }
+  }
   .jumbo-slider__nav{
     display: flex;
     position: absolute;
