--- a/odmdev-help/css/styles.css
+++ b/odmdev-help/css/styles.css
@@ -4,7 +4,7 @@ header{
   display: flex;
   padding: 0 15px;
   align-items: center;
-  justify-content: space-between;
+  justify-content: flex-start;
   width: 100%;
   box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.5);
   position: fixed;
