--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,6 +1,11 @@
 @import "reset.scss";
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&family=Noto+Sans+JP:wght@100;300;400;500;700;900&display=swap');
 
+body {
+	line-height: 1;
+	background: #1b1b1b;
+}
+
 .page-header{
   display: flex;
   justify-content: space-between;
@@ -13,6 +18,9 @@
   padding: 20px;
   .page-header__logo{
     color: #fff;
+    span{
+      font-size: 20px;
+    }
   }
   .page-header__nav{
     color: #fff;
@@ -25,11 +33,19 @@
 }
 
 .jumbo-slider{
-  height: 100vh;
+  height: 100%;
   width: 100%;
   background: #1b1b1b;
+  margin-bottom: 2rem;
   .jumbo-slider__container{
     position: relative;
+  }
+  .container{
+    max-width: 1200px;
+    width: 100%;
+    margin: auto;
+    margin-bottom: 2rem;
+    // overflow-y: scroll;
   }
   .jumbo-slider__slide{
     width: 100%;
@@ -51,6 +67,68 @@
       position: absolute;
       z-index: 1;
     }
+    .jumbo-slider__info{
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      position: relative;
+      z-index: 2;
+      height: 100%;
+      width: 100%;
+      .jumbo-slider__slide-number{
+        font-size: 20rem;
+        font-weight:700;
+        color: #03fc7f;
+        position: relative;
+        opacity: 0;
+        transform: translate3d(0,100px,0px);
+        transition: transform .4s ease-in-out 1s, opacity .4s ease-in-out 1s;
+        margin-bottom: 2rem;
+        &--active{
+          opacity: 1;
+          transform: translate3d(0,0px,0px);
+        }
+      }
+      .jumbo-slider__title{
+        font-size: 2rem;
+        font-weight: 700;
+        text-transform: uppercase;
+        background: #fff;
+        color: black;
+        padding: 10px;
+        width: fit-content;
+        position: relative;
+        opacity: 0;
+        transform: translate3d(0,100px,0px);
+        transition: transform .4s ease-in-out 1.5s, opacity .4s ease-in-out 1.5s;
+        margin-bottom: 2rem;
+        &--active{
+          opacity: 1;
+          transform: translate3d(0,0px,0px);
+        }
+      }
+      .jumbo-slider__description{
+        max-width: 600px;
+        line-height: 1.3;
+        color: #1b1b1b;
+        background: #fff;
+        padding: 10px;
+        position: relative;
+        opacity: 0;
+        transform: translate3d(0,100px,0px);
+        transition: transform .4s ease-in-out 2s, opacity .4s ease-in-out 2s;
+        // margin: 0px 0px 0px 250px;
+        margin: 0px auto;
+        margin-bottom: 2rem;
+        span{
+          font-size: 12px;
+        }
+        &--active{
+          opacity: 1;
+          transform: translate3d(0,0px,0px);
+        }
+      }
+    }
   }
   .jumbo-slider__nav{
     display: flex;
@@ -65,6 +143,7 @@
       font-size: 1rem;
       // font-size: 1.4rem;
       color: #fff;
+      color: transparent;
       text-transform: uppercase;
       text-decoration: none;
       padding: 20px;
